--- a/spec/fixtures/maintenance.yml
+++ b/spec/fixtures/maintenance.yml
@@ -1,5 +1,7 @@
 ---
 reason: Oopsie!
 allowed_paths: [/uuddlrlrba.*]
-allowed_ips: [42.42.42.0/24]
+allowed_ips:
+  - 10.0.0.42
+  - 192.168.1.0/24
 response_code: 418
