--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ rvm:
   - 2.1.0
   - 2.1.4
 script: bundle exec rspec
+before_install:
+  # fixes Travis CI error: NoMethodError: undefined method `spec' for nil:NilClass
+  - gem install bundler
