--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,22 @@
-nguage: ruby
+language: ruby
+sudo: false
+
+cache: bundler
+
+bundler_args: --no-deployment --binstubs=./bin
+
+before_install:
+  - "echo 'gem: --no-ri --no-rdoc' > ~/.gemrc"
+  - gem install bundler
+
+install:
+  - bundle install --path vendor/bundle
+
+script: bundle exec rspec
+
 rvm:
-  - 1.9.3
   - 2.0.0
   - 2.1.8
   - 2.2.4
   - 2.3.0
   - jruby-9.0.5.0
-script: bundle exec rspec
-before_install:
-  # fixes Travis CI error: NoMethodError: undefined method `spec' for nil:NilClass
-  - gem install bundler
