--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ before_install:
   - "echo 'gem: --no-ri --no-rdoc' > ~/.gemrc"
   - gem install bundler
 
+env:
+  global:
+    - JRUBY_OPTS="--debug"
+
 install:
   - bundle install --path vendor/bundle
 
